test/es6/openfl/errors/IllegalOperationErrorTest.js
import IllegalOperationError from "openfl/errors/IllegalOperationError";
var assert = chai.assert;


describe ("ES6 | IllegalOperationError", function () {
	
	
	it ("new", function () {
		
		// TODO: Confirm functionality
		
		var illegalOperationError = new IllegalOperationError ();
		assert.notEqual (illegalOperationError, null);
		
	});
	
	
});